[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/menu.gd" type="Script" id=2]

[node name="control_root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
Settings_scene = ExtResource( 1 )

[node name="hbox_items_container" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.5
margin_top = -12.5
margin_right = 108.5
margin_bottom = 12.5
custom_constants/separation = 47
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_exit" type="Button" parent="hbox_items_container"]
margin_right = 35.0
margin_bottom = 25.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_start" type="Button" parent="hbox_items_container"]
margin_left = 82.0
margin_right = 123.0
margin_bottom = 25.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_settings" type="Button" parent="hbox_items_container"]
margin_left = 170.0
margin_right = 233.0
margin_bottom = 25.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="hbox_items_container/btn_exit" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="hbox_items_container/btn_exit" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="hbox_items_container/btn_start" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="hbox_items_container/btn_settings" to="." method="_on_settings_button_pressed"]
